[package]
name = "github_issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
async-graphql = { version = "7.0.6", features = ["bson", "chrono"] }
async-graphql-rocket = "7.0.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
dotenv = "0.15.0"